--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				</svg>
 			</a>
 			<div class="heart"></div>
-			<h2><span>Love is</span><br />LOVE1</h2>
+			<h2><span>Tiangua is</span><br />LOVE</h2>
 		</div>
 		<script src="anime.min.js"></script>
 		<script src="script.js"></script>
