--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<div class="container">
-			<a href="https://github.com/emjose/heart-animation/#header" target="_blank" rel="noopener noreferrer"
+			<a href="" target="_blank" rel="noopener noreferrer"
 				class="github-corner" title="View source on GitHub" aria-label="View source on GitHub">
 				<svg width="80" height="80" viewBox="0 0 250 250"
 					style="fill: var(--github-fill); color: var(--github-color); position: absolute; top: 0; border: 0; right: 0"
